KAFKAWRAP-58: Add possibility to specify retention time and max massage size topic configs (#54)