@@ -15,12 +15,12 @@ import org.mockito.ArgumentCaptor;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static io.vertx.core.Future.failedFuture;
 import static io.vertx.core.Future.succeededFuture;
 import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentCaptor.forClass;
 import static org.mockito.ArgumentMatchers.anyList;
@@ -36,13 +36,14 @@ import static org.mockito.Mockito.when;
 @RunWith(VertxUnitRunner.class)
 public class KafkaAdminClientServiceTest {
 
+  private static final String STUB_TENANT = "foo-tenant";
+
   private final List<String> allExpectedTopics = List.of(
     "folio.foo-tenant.kafka-wrapper.topic1",
     "folio.foo-tenant.kafka-wrapper.topic2",
     "folio.foo-tenant.kafka-wrapper.topic3"
   );
 
-  private final String STUB_TENANT = "foo-tenant";
   private KafkaAdminClient mockClient;
   private Vertx vertx;
 
@@ -113,6 +114,16 @@ public class KafkaAdminClientServiceTest {
 
         // Only these items are expected, so implicitly checks size of list
         assertTrue(allExpectedTopics.containsAll(getTopicNames(createTopicsCaptor)));
+
+        var topicWithConfigs = createTopicsCaptor.getAllValues().get(0).stream()
+          .filter(topic -> topic.getConfig() != null)
+          .filter(topic -> Boolean.FALSE.equals(topic.getConfig().isEmpty()))
+          .findFirst();
+        assertTrue(topicWithConfigs.isPresent());
+        assertEquals(TestKafkaTopic.TOPIC_THREE.messageRetentionTime() + "",
+          topicWithConfigs.get().getConfig().get(KafkaAdminClientService.MESSAGE_RETENTION_TIME_IN_MILLIS_CONFIG));
+        assertEquals(TestKafkaTopic.TOPIC_THREE.messageMaxSize() + "",
+          topicWithConfigs.get().getConfig().get(KafkaAdminClientService.MESSAGE_MAX_SIZE_IN_BYTES_CONFIG));
       }));
   }
 
@@ -147,7 +158,7 @@ public class KafkaAdminClientServiceTest {
   private List<String> getTopicNames(ArgumentCaptor<List<NewTopic>> createTopicsCaptor) {
     return createTopicsCaptor.getAllValues().get(0).stream()
       .map(NewTopic::getName)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private Future<Void> createKafkaTopicsAsync(KafkaAdminClient client) {
